tests/snapshots/file@print@missing_argument.lox.snap
---
source: tests/common/mod.rs
description: "// [line 2] Error at ';': Expect expression.\nprint;\n"
input_file: crafting_interpreters_test_files/print/missing_argument.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found ';'
   ╭─[2:6]
 1 │ // [line 2] Error at ';': Expect expression.
 2 │ print;
   ·      ┬
   ·      ╰── here
   ╰────
